# cmake-template

./: CMakeLists.txt  README.md
cmake/: StaticAnalyzers.cmake
src/: CMakeLists.txt  main.cpp
